80% test coverage achieved